<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bekony.GameActivity" >

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/beaconView"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/score"
        android:layout_alignLeft="@+id/beaconView"
        android:text="@string/player_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/scoreGain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/score"
        android:layout_below="@+id/score"
        android:text="@string/score_gain"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/serverMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreGain"
        android:layout_centerHorizontal="true"
        android:text="@string/server_message"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/beaconView"
        android:layout_width="wrap_content"
        android:layout_height="356dp"
        android:layout_above="@+id/timeLeft"
        android:layout_below="@+id/serverMessage"
        android:layout_centerHorizontal="true" >

    </ListView>

    <TextView
        android:id="@+id/timeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/time_left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>